Fix code font size on small screens

--- a/css/syntax.css
+++ b/css/syntax.css
@@ -2,7 +2,16 @@
   background: #ffffff;
   font-family: 'DejaVu Sans Mono', monospace;
   text-align: left;
-  font-size: 1.5em;
+}
+@media only screen and (max-width: 1000px) {
+  .highlight {
+    font-size: 1.1em;
+  }
+}
+@media only screen and (min-width: 1000px) {
+  .highlight {
+    font-size: 1.5em;
+  }
 }
 .highlight .c { color: #999988; font-style: italic } /* Comment */
 .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
